Task10_04_24.txt
Task1 : what if my child class has lesser access modifier private void walk()

	// It gives an error  walk() has private access  cannot override walk() in Primitives private void walk()

	// Primitives.java

		public class Primitives {
			public void eat(){
				System.out.println("eating");
			}
			public void walk(){
				System.out.println("walking");
			}

		}

	// Human.java
		
		public class Human extends Primitives {
			//overriding
			private void walk(){
				System.out.println("I am walking");
			}
		}

	// TestInheritance.java
		
		public class Human extends Primitives {
			//overriding
			private void walk(){
				System.out.println("I am walking");
			}
		}
	// error :
 
		walk() has private access in Human
                human1.walk();
                      ^
	.\Human.java:4: error: walk() in Human cannot override walk() in Primitives
        	private void walk(){
                	     ^
  	attempting to assign weaker access privileges; was public
	2 errors

Task2 : Calc, scientific calc, programmer calc - implement complete inheritance(overriding,uniq methd...)

	StandardCalc

		addition()
		multiply()
		substraction()
		division()

	ScientificCalc extands StandardCalc

		//Unique code
		trigonometry()
		functions()

	ProgrammerCalc extands StandardCalc

		//Unique code
		hex()
		dec()
		oct()
		bin()
		bitwise()
		bitShift()

Task3 :  Radio, Tv, Dvd Player - identify the Apt parent class and implement inheritance

	ElectronicDevice
		
		turnoff()
		turnon()
		audio()

	Radio extands ElectronicDevice
		
		//Unique code
		tunetofrequency()

	Tv extands ElectronicDevice
		
		//Unique code
		changeChannel()
		record()

	DVDPlayer extands ElectronicDevice

		//Unique code
		playDVD()
		insertDisk()

Task4 : Admin, Manager, Finance - idetify the parent class and implement inheritance

	Department

		info()
		login()
		logout()

	Admin extands Department
		
		//Unique Code
		adminDetails()
	
	Manager extands Department

		//Unique Code
		managerDetails()
		employeeManagement()

	Finance extands Department()

		//Unique Code
		AccountInfo()
		Salary()